--- a/backend/package.json
+++ b/backend/package.json
@@ -14,7 +14,8 @@
   "description": "",
   "dependencies": {
     "dotenv": "^16.4.5",
-    "express": "^4.21.0"
+    "express": "^4.21.0",
+    "mongoose": "^8.6.3"
   },
   "devDependencies": {
     "@types/express": "^4.17.21",
